--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
 
     <div class="container-fluid">
       <div class="row">
-      	 <div class="col-sm-3 col-md-2 sidebar">
-          <h4>Sources</h4>
-          <ul class="nav nav-sidebar" id="select_source">
-            
+      	 <div class="col-sm-3 col-md-2 sidebar" id="select_source">
+          <h4>Literary Sources</h4>
+          <ul class="nav nav-sidebar" id="lit">
+
+          </ul>
+          <h4>Musical Sources</h4>
+          <ul class="nav nav-sidebar" id="mus">
+
           </ul>
         </div>
       	<div class="col-sm-6 col-sm-offset-3 col-md-8 col-md-offset-2 main" id="TEI"></div>
@@ -34,8 +38,8 @@
       		</div>
       	</div>
       </div>
-    </div> 
-    
+    </div>
+
     <!-- loading ES5 deps + main js -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
