Still fighting with depts

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/raffazizzi/variorum/gh-pages/node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="dist/css/tei.css" />
     <link rel="stylesheet" href="dist/css/variorum.css" />
   </head>
@@ -41,8 +41,8 @@
     </div>
 
     <!-- loading ES5 deps + main js -->
-    <script src="https://raw.githubusercontent.com/raffazizzi/variorum/gh-pages/node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="https://raw.githubusercontent.com/raffazizzi/variorum/gh-pages/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="dist/js/jquery.min.js"></script>
+    <script src="dist/js/bootstrap.min.js"></script>
     <script src="dist/js/variorum.js"></script>
   </body>
 </html>
