--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="dist/css/tei.css" />
     <link rel="stylesheet" href="dist/css/variorum.css" />
   </head>
@@ -21,8 +21,12 @@
     <div class="container-fluid">
       <div class="row">
       	 <div class="col-sm-3 col-md-2 sidebar" id="select_source">
-          <h4>Literary Sources</h4>
-          <ul class="nav nav-sidebar" id="lit">
+          <h4>Literary Manuscripts</h4>
+          <ul class="nav nav-sidebar" id="lit_ms">
+
+          </ul>
+          <h4>Literary Prints</h4>
+          <ul class="nav nav-sidebar" id="lit_p">
 
           </ul>
           <h4>Musical Sources</h4>
@@ -41,8 +45,8 @@
     </div>
 
     <!-- loading ES5 deps + main js -->
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="dist/js/jquery.min.js"></script>
+    <script src="dist/js/bootstrap.min.js"></script>
     <script src="dist/js/variorum.js"></script>
   </body>
 </html>
