--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
     <div class="container-fluid">
       <div class="row">
       	 <div class="col-sm-3 col-md-2 sidebar" id="select_source">
-          <h4>Literary Sources</h4>
-          <ul class="nav nav-sidebar" id="lit">
+          <h4>Literary Manuscripts</h4>
+          <ul class="nav nav-sidebar" id="lit_ms">
+
+          </ul>
+          <h4>Literary Prints</h4>
+          <ul class="nav nav-sidebar" id="lit_p">
 
           </ul>
           <h4>Musical Sources</h4>
